--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -449,8 +449,22 @@ template(name='guest_waiver_check')
     unless waiver_signed
         .ui.large.basic.button
             i.signature.icon
-            |Guest Waiver Not Signed 
+            |guest waiver not signed 
         
         
             
         
+template(name='kiosk_send_message')                
+    .ui.big.fluid.button.send_message 
+        +i name='send-comment' classes='ui inline mini image'
+        |send message
+    if sending_message
+        +sending_kiosk_message
+
+template(name='sending_kiosk_message')
+    .ui.header sending message
+    with sending_message_doc
+        +textarea_edit key='body' direct=true
+        .ui.big.green.button.send_message send
+    .ui.big.button.cancel_message cancel
+                    
