--- a/components/profile/profile.jade
+++ b/components/profile/profile.jade
@@ -26,7 +26,7 @@ template(name='user_layout')
                     if user_is_resident
                         if is_staff
                             a.ui.big.button.item(href="/user/#{user_from_username_param.username}/edit")
-                                //- +i name='settings' classes='ui inline mini image'
+                                +i name='settings' classes='ui inline mini image'
                                 //- i.cog.icon
                                 |edit
                             +resident_info         
@@ -36,12 +36,12 @@ template(name='user_layout')
                             .ui.small.header #{tagline}
                     if is_current_user
                         a.ui.large.button.item(href="/user/#{user_from_username_param.username}/edit" title='profile settings')
-                            //- +i name='settings' classes='ui inline mini image'
+                            +i name='settings' classes='ui inline mini image'
                             //- i.cog.icon
                             |edit
                     else if is_admin
                         a.ui.large.button.item(href="/user/#{user_from_username_param.username}/edit" title='profile settings')
-                            //- +i name='settings' classes='ui inline mini image'
+                            +i name='settings' classes='ui inline mini image'
                             //- i.cog.icon
                             |edit
                     if is_dev
@@ -51,18 +51,18 @@ template(name='user_layout')
                     //-         +i name='envelope'
                     if is_current_user
                         a.ui.large.button.logout(href="#" title='logout')
-                            //- +i name='exit-sign' classes='ui inline mini image'
+                            +i name='exit-sign' classes='ui inline mini image'
                             //- i.sign.out.alternate.icon
                             |log out
                         a.ui.large.button.logout_other_clients(href="#" title='logout other clients')
-                            //- +i name='feed-out' classes='ui inline mini image'
+                            +i name='feed-out' classes='ui inline mini image'
                             //- i.globe.icon
                             |log out other clients
                     if is_admin
                         .ui.basic.segment
                             .ui.header 
-                                //- +i name='user shield'
-                                i.user.shield.icon
+                                +i name='user shield'
+                                //- i.user.shield.icon
                                 |roles
                             each roles
                                 .ui.basic.label #{this}
