--- a/client/resident_portal.jade
+++ b/client/resident_portal.jade
@@ -8,7 +8,7 @@ template(name='resident_portal')
                     | resident portal
         .four.column.row
             .column
-                +events_small
+                +event_small
             .column
                 +posts_small
             .column
