--- a/client/styles.css
+++ b/client/styles.css
@@ -1,6 +1,6 @@
 body {
-    font-family: 'Raleway', sans-serif !important;
-    /* font-family: 'Ubuntu', sans-serif !important; */
+    /* font-family: 'Raleway', sans-serif !important; */
+    font-family: 'Ubuntu', sans-serif !important;
     /* font-size: 110% !important; */
     /*line-height: 200% !important;*/
     background: rgba(0,0,0,.03) !important;
