--- a/components/maintenance/staff.jade
+++ b/components/maintenance/staff.jade
@@ -176,7 +176,7 @@ template(name='hc_session')
             if garden_key
                 .ui.compact.green.fluid.button.garden_key_checkout
                     +i name='plant' classes='ui mini inline image'
-                    i.tree.icon
+                    //- i.tree.icon
                     strong garden key
                 .ui.fluid.large.button.check_in_garden_key
                     //- i.sign.in.alternate.icon
