--- a/client/home.jade
+++ b/client/home.jade
@@ -26,7 +26,7 @@ template(name='home')
                         +poll_results
                     
             .five.wide.column
-                +requests_small
+                +request_small
                 +service_small
                 +karma_leaderboard
                 +work_order_small
@@ -44,7 +44,7 @@ template(name='home')
                 +footer_chat
                 //- +gallery_small
                 .ui.hidden.divider
-                //- +events_small
+                //- +event_small
     
                 //- +service_list
                 //- +service_slider            
@@ -128,15 +128,13 @@ template(name='home')
         //-     each posts
         //-         +post
 
-template(name='requests_small')
-    .ui.grey.header 
-        |requests
 
 template(name='shop_small')
-    .ui.header 
-        +i name='shop'
+    .ui.large.header 
+        //- +i name='store'
+        i.shop.grey.icon
         |for sale
-    .ui.relaxed.big.list
+    .ui.relaxed.grey.list.smallscroll
         each products 
             .item
                 if image
@@ -145,6 +143,7 @@ template(name='shop_small')
                     img.ui.mini.inline.image(src="{{c.url picture width=300 height=300 gravity='face' crop='fill'}}")
                 .ui.grey.inline.small.header 
                     |#{title}
+                    .ui.basic.label $#{dollar_price}
     
 
 
@@ -268,46 +267,6 @@ template(name='service_slider')
                 //-     //     | My goal is to spread light to others to help them navigate their own journey through life.
                     
                     
-template(name='event_slider')
-    //- #layerslider(style='width:100%; height: 400px;')
-    #event_slider(style='width:100%; height: 250px')
-        each slides
-            .ls-slide(data-ls='slidedelay: 10000;')
-                //- if image_url
-                //-     img.ls-bg(src=image_url)
-                .ls-l(style="top: 5px; left: 10px;" )
-                    .ui.header #{title}
-                .ls-l(style="top: 25px; left: 10px; width:200px; height:20px;" )
-                    .ui.small.header !{description}
-                img.ui.cent.image.ls-l(src="{{c.url image_id height=180 width=300 crop='fill'}}" style="top: 50px; left: 0%;")
-                //- img.ls-bg(src="{{c.url image height=500 width=800 background='white' crop='lpad'}}", alt='Slide background' )
-                //- .ls-l(style="top: 50%; height: 170px; width: 170px; left: 20%;" )
-                //-     h2.slider-subheader: subtitle
-                //-     // h2.slider-subheader
-                //-     //     | My goal is to spread light to others to help them navigate their own journey through life.
-                    
-                    
-template(name='events_small')
-    //- .ui.inline.grey.header 
-    //-     +i name='calendar'
-    //-     |events
-    +event_slider
-    //- +model_scroller model='event' header='events' icon='calendar'
-
-    //- .ui.animated.large.list
-    //-     each gr_events
-    //-         a.active.item(href="/event/#{_id}/view") 
-    //-             .ui.small.header #{title}
-    //-             each tags
-    //-                 .ui.small.basic.label #{this}
-    //-             //- span(title='views and points')
-    //-             //-     |#{views}
-    //-             //-     i.eye.grey.icon
-    //-             //-     |#{points}
-    //-             //-     i.thumbs.up.outline.grey.icon
-    //- 
-    //-         //- a.active.item(href="/m/#{model}/#{_id}/view")
-
 
 
 template(name='health_club_status_small')
