--- a/components/events.jade
+++ b/components/events.jade
@@ -83,3 +83,46 @@ template(name='event_view')
                     +html_view key='description' icon='content' label='description' direct=true
                     +boolean_view key='published' label='published' direct=true
                     +comments
+
+
+template(name='event_slider')
+    //- #layerslider(style='width:100%; height: 400px;')
+    #event_slider(style='width:100%; height: 250px')
+        each slides
+            .ls-slide(data-ls='slidedelay: 10000;')
+                //- if image_url
+                //-     img.ls-bg(src=image_url)
+                .ls-l(style="top: 5px; left: 10px;" )
+                    .ui.header #{title}
+                .ls-l(style="top: 25px; left: 10px; width:200px; height:20px;" )
+                    .ui.small.header !{description}
+                img.ui.cent.image.ls-l(src="{{c.url image_id height=180 width=300 crop='fill'}}" style="top: 50px; left: 0%;")
+                //- img.ls-bg(src="{{c.url image height=500 width=800 background='white' crop='lpad'}}", alt='Slide background' )
+                //- .ls-l(style="top: 50%; height: 170px; width: 170px; left: 20%;" )
+                //-     h2.slider-subheader: subtitle
+                //-     // h2.slider-subheader
+                //-     //     | My goal is to spread light to others to help them navigate their own journey through life.
+                    
+                    
+template(name='event_small')
+    .ui.large.header 
+        //- +i name='calendar'
+        i.calendar.grey.icon
+        |events
+    //- +event_slider
+    //- +model_scroller model='event' header='events' icon='calendar'
+
+    .ui.animated.large.list
+        each gr_events
+            //- a.active.item(href="/event/#{_id}/view") 
+            .ui.small.header #{title} 
+                .ui.basic.label #{start_date}
+                //- each tags
+                //-     .ui.small.basic.label #{this}
+                //- span(title='views and points')
+                //-     |#{views}
+                //-     i.eye.grey.icon
+                //-     |#{points}
+                //-     i.thumbs.up.outline.grey.icon
+    
+            //- a.active.item(href="/m/#{model}/#{_id}/view")
