--- a/components/request.jade
+++ b/components/request.jade
@@ -141,3 +141,16 @@ template(name='request_time')
     .ui.small.grey.header estimated time to complete
     +number_view key='estimated_minutes' label='minutes' direct=true
     +float_view key='estimated_hours' label='hours' direct=true
+
+
+template(name='request_small')
+    .ui.large.header
+        i.hand.holding.heart.grey.icon 
+        |requests
+    .ui.relaxed.grey.list.smallscroll
+        each requests 
+            .grey.item
+                .ui.grey.inline.small.header 
+                    |#{title}
+                    //- .ui.basic.label $#{dollar_price}
+    
