--- a/components/request.jade
+++ b/components/request.jade
@@ -147,6 +147,7 @@ template(name='request_small')
     .ui.large.header
         i.hand.holding.heart.grey.icon 
         |requests
+    +cloud filter='request'
     .ui.relaxed.grey.list.smallscroll
         each requests 
             .grey.item
