--- a/client/styles.css
+++ b/client/styles.css
@@ -311,7 +311,12 @@ input.username_search{
     padding:40px!important;
 } */
 
-.button {
+.button.select_service_tag {
+    margin:5px !important;
+}
+
+
+.button:not(.select_service_tag) {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     /* box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important; */
     margin:5px !important;
