--- a/components/admin/docs.jade
+++ b/components/admin/docs.jade
@@ -37,6 +37,24 @@ template(name='cloud')
             .unselect_tag.ui.active.button
                 strong #{this}
     each all_tags
+        .ui.compact.tiny.button.select_tag(class=cloud_tag_class) 
+            strong #{this.name}
+
+
+
+template(name='mini-cloud')
+    //- #cloud
+        //- .ui.left.icon.input
+        //-     i.search.icon
+        //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
+        // .ui.hidden.fitted.divider
+    if selected_tags
+        #clear_tags.ui.active.icon.button
+            i.remove.icon
+        each selected_tags
+            .unselect_tag.ui.active.button
+                strong #{this}
+    each all_tags
         .ui.compact.large.button.select_tag(class=cloud_tag_class) 
             strong #{this.name}
 
